--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,10 @@ set -g prefix C-t
 # unbind ctrl b
 unbind C-b
 
-
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 # reducing the delay for key strokes
 set -sg escape-time 1
 
@@ -102,9 +105,11 @@ set -g status-position top
 setw -g mode-keys vi
 ## enabling system's clipboard
 ## vim like operation on the copying mode
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T vi-copy y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T vi-copy Enter
+bind-key -T vi-copy Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+
+run '~/.tmux/plugins/tpm/tpm'
 
 
