--- a/.tmux.conf
+++ b/.tmux.conf
@@ -107,4 +107,19 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
+# settings for tmux plugin manager from https://github.com/tmux-plugins/tpm
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+run-shell '~/.tmux/plugins/tmux-better-mouse-mode/scroll_copy_mode.tmux'
+set -g @scroll-speed-num-lines-per-scroll "1"
+#eof
