make tmux to use zsh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -127,4 +127,6 @@ run '~/.tmux/plugins/tpm/tpm'
 
 run-shell '~/.tmux/plugins/tmux-better-mouse-mode/scroll_copy_mode.tmux'
 set -g @scroll-speed-num-lines-per-scroll "1"
+
+set-option -g default-shell /bin/zsh
 #eof
