--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,31 +62,22 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 set -g default-terminal "screen-256color"
 
 # changing the colors of the status bar
-set -g status-fg white
-set -g status-bg black
+set -g status-style fg=white,bg=black
 
 # changing the colors of the window list
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-style fg=cyan,bg=default,dim
+
 # enphasizing the active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=white,bg=red,bright
 
 # setting the color for pene boarder
-set -g pane-border-fg green
-set -g pane-border-bg black
+set -g pane-border-style fg=green,bg=black
+
 # enphasizing active panes
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+set -g pane-active-border-style fg=white,bg=yellow
 
-# 
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white,bg=yellow,bright
 
-# 
 ## left panel
 set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
